Atualiza botão do currículo e melhorias visuais

--- a/index.html
+++ b/index.html
@@ -231,7 +231,8 @@
         <div class="contact-buttons">
             <a class="btn" href="https://www.linkedin.com/in/vinicius-pontual-0b31632a7/" target="_blank" rel="noopener">LinkedIn</a>
             <a class="btn" href="https://github.com/Vinisilva0010" target="_blank" rel="noopener">GitHub</a>
-            <a class="btn download" href="assets/curriculo-vinicius.pdf" download target="_blank" rel="noopener">📄 Baixar Currículo</a>
+          <a class="btn download" href="https://drive.google.com/file/d/1xw7CYN4r92SKuXLoZgnCXzF5P57yCkwM/view?usp=sharing" target="_blank" rel="noopener">📄 Visualizar Currículo</a>
+
         </div>
     </section>
 
